# cookiecutter-datascience

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  cookiecutter.json  mypy.ini  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: tests.yaml
hooks/: post_gen_project.py
tests/: conftest.py  test_project_creation.py
{{cookiecutter.repo_name}}/: .flake8  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml  setup.cfg  tox.ini
{{cookiecutter.repo_name}}/tests/: test_foo.py
{{cookiecutter.repo_name}}/{{cookiecutter.package_name}}/: __init__.py
