[metadata]
name = cookiecutter-datascience 
version = 20200101.1a0
url = https://github.com/RothNRK/cookiecutter-datascience
author = Noel Kippers
keywords = cookiecutter, template, package
license = BSD
description = A cookiecutter template for my datascience projects
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >=3.7
packages = find:
tests_require =
    pytest
    pytest-cov==2.8.1

[options.package_data]
* = *.ini, *.yml, *.yaml

[options.entry_points]
console_scripts =
    {{ cookiecutter.package_name }} = {{ cookiecutter.package_name }}.main:main 

[options.extras_require]
dev = 
    pre-commit==2.2.0
    pytest
    pytest-cov==2.8.1
