[metadata]
name = {{ cookiecutter.package_name }}
version = 20200101.1a0
url = {{ cookiecutter.git_url }}
description = {{ cookiecutter.description }}
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >=3.7
packages = find:
include_package_data = True
install_requires = click
tests_require =
    pytest
    pytest-cov==2.8.1

[options.package_data]
* = *.ini, *.yml, *.yaml

[options.entry_points]
console_scripts =
    {{ cookiecutter.package_name }} = {{ cookiecutter.package_name }}.main:main

[options.extras_require]
dev =
    pre-commit==2.2.0
    pytest
    pytest-cov==2.8.1
